# ncursesMGame

./: CMakeLists.txt  LICENSE  Makefile  README.md
Client/: ClientAPI.cpp  ClientAPI.hpp  ClientLayout.cpp  ClientLayout.hpp  Game.cpp  Game.hpp  main.cpp
Common/: Bomb.cpp  Bomb.hpp  Object.cpp  Object.hpp  PowerUp.cpp  PowerUp.hpp  Projectiles.cpp  Projectiles.hpp  SerDes.cpp  SerDes.hpp  Ship.cpp  Ship.hpp  Types.cpp  Types.hpp
Server/: Client.cpp  Client.hpp  GameServer.cpp  GameServer.hpp  Server.cpp  Server.hpp  ServerAPI.cpp  ServerAPI.hpp  main.cpp
Settings/: GameSettings.h
